docs-kits_versioned_docs/version-23.12/kits/knowledge-agents/development-view/api/agent/skill/post.mdx
---
id: postSkill
title: Register a Skill
slug: agent-skill-post
---
<!--
 * Copyright (c) 2021,2023 T-Systems International GmbH
 * Copyright (c) 2021,2023 Bayerische Motoren Werke Aktiengesellschaft (BMW AG) 
 * Copyright (c) 2021,2023 Mercedes-Benz AG
 * Copyright (c) 2021,2023 ZF Friedrichshafen AG
 * Copyright (c) 2021,2023 SAP SE
 * Copyright (c) 2021,2023 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file(s) distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This documentation and the accompanying materials are made available under the
 * terms of the Creative Commons Attribution 4.0 International License,  which is available at
 * https://creativecommons.org/licenses/by/4.0/legalcode.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 *
 * SPDX-License-Identifier: CC-BY-4.0
-->
```
POST /agent/skill
```

**Register a Skill: **

## Parameters

| name             | in    | type    | required | description                                                             |
| ---------------- | ----- | ------- | -------- | ----------------------------------------------------------------------- |
| asset            | query | string  | true     | The Target Asset of the Query (targets the complete dataspace if empty) |
| distributionMode | query | string  | false    | The distribution mode under which to publish the skill                  |
| contract         | query | string  | false    | The contract under which the skill should be published                  |
| isFederated      | query | boolean | false    | Whether the skill should be visible in the Federated Catalogue          |
| ontology         | query | string  | false    | Multiple references to ontologies which are referenced in the skill     |

## Request Body

| Headers      |                          |
| ------------ | ------------------------ |
| content-type | application/sparql-query |

```json title="Example request"
"string"
```

## Code Snippets

```shell title="Shell + Curl"
curl --request POST \
  --url 'https://knowledge.dev.demo.catena-x.net/consumer-edc-data/BPNL00000003CQI9/api/agent/skill?asset=SOME_STRING_VALUE&distributionMode=SOME_STRING_VALUE&contract=SOME_STRING_VALUE&isFederated=SOME_BOOLEAN_VALUE&ontology=SOME_STRING_VALUE' \
  --header 'content-type: application/sparql-query'
```

## Responses

### 200

Skill has been registered

### 204

Skill has been updated

### 400

Bad request or malformed SPARQL

### 500

Fatal error

<sub><sup>(C) 2021,2023 Contributors to the Eclipse Foundation. SPDX-License-Identifier: CC-BY-4.0</sup></sub>
